--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world! ha ha</p>    
+    <p>Hello world! ha ha</p> 
+    <button>click me</button>   
 </body>
 </html>
